# chewbekka

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
conf/: chewbekka.prompt
src/: async_wrapper.rs  debloat.rs  expand.rs  extract.rs  lib.rs  main.rs  prompts.rs  summarize.rs
tests/debloat/: job.md  job_real.md  job_scam.md
tests/expand/: task1.md  task2.md
