[package]
name = "chewbekka"
version = "1.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.120"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rayon = "1.6.1"
indicatif = {version = "*", features = ["rayon"]}
